--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">基类构造</string>
+    <string name="exit">exit</string>
+    <string name="previous">previous</string>
+    <string name="refresh">refresh</string>
 </resources>
